fix(styles): change language toggle position on mobile screens

--- a/src/layouts/doc-layout/doc-layout.module.scss
+++ b/src/layouts/doc-layout/doc-layout.module.scss
@@ -208,9 +208,8 @@ a.sidebar-link {
 
   &-mobile {
     @include sm-down {
-      position: absolute;
-      top: -85px;
-      left: 0;
+      margin-top: 0;
+      margin-right: auto;
     }
   }
 }
